[package]
name = "vines"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
async-recursion = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" , features = ["raw_value"] }
futures = { version = "0.3.17" }
# macros = { path = "macros"}
dashmap = "5.0.0"
pin-project = "1"
tower-service= {version = "0.3"}
tokio = {version = "1.12.0", features = ["full"] }
log = "0.4.14"

[dev-dependencies]
criterion = "0.3"
tokio = {version = "1.12.0", features = ["full"] }
smol = {version = "1.2.5"}

# [[bench]]
# name = "benchmark"
# harness = false