[package]
name = "vines"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.52"
async-recursion = "1.0.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["raw_value"] }
futures = { version = "0.3.21" }
# macros = { path = "macros"}
dashmap = "5.1.0"
pin-project = "1.0.10"
tower-service= {version = "0.3"}
tower = { version = "0.4.12", features=["util"]}
log = "0.4.14"

[dev-dependencies]
criterion = "0.3"
tokio = {version = "1.17.0", features = ["full"] }

# [[bench]]
# name = "benchmark"
# harness = false