[package]
name = "macros"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.8"
syn = {version = "1.0.8", features=["full", "extra-traits"]}
anyflow = { path = "../../anyflow"}
proc-macro2 = {version="1.0"}
[lib]
proc-macro = true