[package]
name = "macros"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.8"
syn = {version = "1.0.8", features=["full", "extra-traits"]}
vines = { path = "../../vines"}
proc-macro2 = {version="1.0"}
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["raw_value"] }

[lib]
proc-macro = true