[package]
name = "web-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.21.4"
vines = { path = "../../../vines"}
macros = { path = "../../../vines/macros"}
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" , features = ["raw_value"] }
async-trait = "0.1"
futures = { version = "0.3.17" }
tokio = {version = "1.12.0", features = ["full"] }
actix-web = "4.0.1"
log = "0.4.14"
pretty_env_logger = "0.4"

[profile.release]
debug = true